<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_baseline_calculate_24"
            android:title="@string/menu_calculator" />
        <item
            android:id="@+id/nav_webview"
            android:icon="@drawable/ic_baseline_explore_24"
            android:title="@string/menu_webview" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_baseline_library_music_24"
            android:title="@string/menu_music" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_stories"
            android:icon="@drawable/ic_baseline_article_24"
            android:title="@string/menu_stories" />
        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/ic_baseline_build_24"
            android:title="@string/menu_sensors" />
        <item
            android:id="@+id/nav_record"
            android:icon="@drawable/ic_baseline_mic_24"
            android:title="@string/menu_record" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
    </group>
</menu>