<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.galieva.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_calculator"
        android:name="ru.mirea.galieva.mireaproject.ui.calculator.CalculatorFragment"
        android:label="@string/menu_calculator"
        tools:layout="@layout/fragment_calculator" />

    <fragment
        android:id="@+id/nav_webview"
        android:name="ru.mirea.galieva.mireaproject.ui.slideshow.WebViewFragment"
        android:label="@string/menu_webview"
        tools:layout="@layout/fragment_webview" />
    <fragment
        android:id="@+id/nav_music"
        android:name="ru.mirea.galieva.mireaproject.ui.music.MusicFragment"
        android:label="@string/menu_music"
        tools:layout="@layout/fragment_music" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="ru.mirea.galieva.mireaproject.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_stories"
        android:name="ru.mirea.galieva.mireaproject.ui.stories.StoriesFragment"
        android:label="@string/menu_stories"
        tools:layout="@layout/fragment_stories" />
</navigation>